# nightcore-auth-service-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
src/: lib.rs  main.rs
src/api/: docs.rs  mod.rs  state.rs  utils.rs
src/api/endpoints/: auth.rs
src/api/routes/: auth.rs  health.rs
src/core/: config.rs  mod.rs
src/domain/: entities.rs  exceptions.rs  interfaces.rs  mod.rs
src/infra/: mod.rs
src/infra/discord/: config.rs  mod.rs  oauth_provider.rs
src/infra/redis/: client.rs  config.rs  mod.rs  repository.rs
src/services/: jwt_service.rs  mod.rs  oic_service.rs
src/utils/: logging.rs
