[package]
name = "nightcore-auth-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.2.4", features = ["tokio-comp", "connection-manager"] }
serde_json = "1"
async-trait = "0.1.89"
chrono = "0.4.45"
config = "0.15.24"
dotenvy = "0.15.7"
once_cell = "1.21.4"
thiserror = "2.0.18"
time = "0.3.49"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
