[package]
name = "nightcore-auth-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.2.4", features = ["tokio-comp", "connection-manager"] }
serde_json = "1"
async-trait = "0.1.89"
chrono = "0.4.45"
config = "0.15.24"
once_cell = "1.21.4"
thiserror = "2.0.18"
time = "0.3.49"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.7.0", features = ["trace"] }
reqwest = { version = "0.13.4", features = ["json", "form"] }
base64 = "0.22.1"
jsonwebtoken = "10.4.0"
uuid = { version = "1.23.3", features = ["v4"] }
